# sleapyfaces-old

./: LICENSE  README.md  hatch.toml  mkdocs.yml  pyproject.toml
sleapyfaces/: __about__.py  __init__.py  __main__.py  deconstruct.py  experiment.py  io.py  normalize.py  project.py  structs.py  utilities.py  utils.py
sleapyfaces/cli/: __init__.py
src/SLEAPyFaces/: __about__.py  __init__.py
