[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleapyfaces"
description = 'A package for extracting facial expressions from SLEAP analyses'
readme = "README.md"
requires-python = ">=3.7"
license = "LICENSE"
keywords = []
authors = [
  { name = "Analetta (Annie) Ehler", email = "annie.ehler.4@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
	"License :: OSI Approved :: MIT License",
]
dependencies = [
  "click",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/annie444/sleapyfaces#readme"
Issues = "https://github.com/annie444/sleapyfaces/issues"
Source = "https://github.com/annie444/sleapyfaces"
Homepage = "https://github.com/annie444/sleapyfaces"

[project.scripts]
sleapyfaces = "sleapyfaces.cli:sleapyfaces"
